# pmail

./: .fac  .gitignore  AndroidManifest.xml  Cargo.toml  README.md  build.gradle  build.rs  build.xml  local.properties
gradle/wrapper/: gradle-wrapper.properties
paper/: .fac  messy.tex  pmail.tex
res/color/: touchy.xml
res/drawable/: touchy.xml
res/layout/: main.xml  main.xml~  my_text_view.xml
res/values/: colors.xml  strings.xml  strings.xml~  styles.xml
rust/: dht.rs  format.rs  format.rs.in  lib.rs  mailbox.rs  message.rs  pmail.rs  str255.rs  udp.rs
src/org/abridgegame/messy/: DisplayMessageActivity.java  Messy.java  MyAdapter.java
