[package]
name = "pmail"
version = "0.1.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]

license = "GPLv3"

[[bin]]
name = "relay"
path = "rust/bin/relay.rs"


[lib]
name = "pmail"
path = "rust/lib.rs"

[dependencies]
onionsalt = { version = "*", git = "https://github.com/droundy/onionsalt" }
arrayref = "0.3.0"

time = "0.1"
