[package]
name = "pmail"
version = "0.1.0"
authors = ["David Roundy <roundyd@physics.oregonstate.edu>"]

license = "GPLv3"

[[bin]]
name = "relay"
path = "rust/bin/relay.rs"


[[bin]]
name = "textmode-pmail"
path = "rust/bin/textmode-pmail.rs"

[lib]
name = "pmail"
path = "rust/lib.rs"

[dependencies]
rustbox = "0.7"

onionsalt = { version = "*", git = "https://github.com/droundy/onionsalt" }
arrayref = "0.3.0"

log = "0.3"
env_logger = "*"
time = "0.1"
